
For editing language files in The Conquerors, I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819]this download[/url].[/color]

[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2015.9.11[/b]:
-Sorted recent paths.
-Villager mode renamed.
-Option to keep window on top.

Version [b]2015.8.28[/b]:
-Simple animations synced.
-SLP view angle settable by mouse right click.
-Angle rotation rate based on available angles.
-Fixed showing trebuchet/cannon icons.
-Fixed showing tech icons and unit action graphics in SWGB and CC.

Version [b]2015.8.26[/b]:
-SLP view background color changeable.
-Added previous and first frame buttons.
-Fixed runtime error in bitmask boxes of units tab.

Version [b]2015.8.25[/b]:
-Immediately refresh graphics when editing them.
-Can play external terrain sounds.
-Fixed massive lag when selecting units.

Version [b]2015.8.23[/b]:
-Icons show without SLP view.
-Looping optional for WAV sounds.
-SLP showing options refresh the view.
-Optional SLP anchor.
-Shield outline shown properly.
-Fixed tech tree loading if you opened AoE 1 first.

Version [b]2015.8.20[/b]:
-Load PNG into 32-bit SLP frame.
-Ability to save SLP graphics as SLP or PNG.
-Play WAV files directly from sounds tab.

Version [b]2015.8.16[/b]:
-Ability to load and show 32-bit HD SLP graphics.
-Rotate palette view from player color copy button.

Version [b]2015.8.13[/b]:
-SLP files are released after reading.
-Dynamically load extra HD palettes.
-Unit action graphics are viewable now.

Version [b]2015.8.12[/b]:
-Added separate SLP view window.
-Ability to choose which unit graphics are shown.

Version [b]2015.8.5[/b]:
-SLP loading code should now handle all kinds of properly formatted files.
-Second DRS folder readable.
-Loop static graphics with angles too.
-Added palette display.
-SLP graphic player color selectable in colors tab.
-DRS files can be (un)loaded from a button.